2013-04-17: Desired image function for mk_GREIT_model: opt.desired_image_fn
2013-04-17: Cache debug output: eidors_cache debug_on/debug_off
2013-04-16: Auto-compile required mex file on startup on Linux
2013-04-16: SVN revision number on startup in dev versions
2013-04-16: Shorthand caching interface: eidors_cache(@fn, params)
2013-04-16: 2D interface to Netgen: ng_mk_2d_model
2013-04-13: Added apparent_resisitivity fwd_solver and jacobian
2013-03-20: Node_data support for mk_image
2013-03-20: Physics support: conductivity, resisitivity and logs:q
2013-02-18: Electrode placement on arbitrary meshes: place_elec_on_surf
2013-02-18: merge non-overlapping (surface) meshes: merge_meshes
2013-02-18: Expand support for gmsh: gmsh_stl2tet
2013-01-23: Quick building of pixel rec_models: mk_pixel_slice
2013-01-23: Draw a single colourbar for mulitple sub-plots: common_colourbar
2013-01-23: Outside parameter for c2f mapping
2013-01-15: New options in meas_icov_rm_elecs to keep or discard default estimate
2013-01-15: Spdiag utility
2012-12-15: Interface to ng.opt
2012-11-20: Revised interface of all jacobian, system mat and fwd_solve functions
            to only accept one input param
2012-11-19: New geophysics tutorials
2012-11-19: pseudosection and geophys stim patterns
2012-11-19: Anisotropy support in fwd_solve and jacobian
2012-10-17: Add support for electrodes in mdl_slice_mesher
2012-10-17: Refactor mk_GREIT_model to use mdl_slice mesher for better rmdl
2012-10-17: Add order_loop under meshing
2012-08-02: Fixed a bug in mk_GREIT_model for opt.square_pixels = 1
2012-07-13: Toggle cache status on specific functions
2012-07-07: ======================== RELEASE 3.6 =========================
2012-07-03: GN absolute solvers (i)  Constrained optimization on conductivity
                                (ii) Prior conductivity at each iteration
2012-07-03: Higher order FEM solvers (on voltage) for forward problem and Jacobian